add: doc changes

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@wojtekmaj/react-daterange-picker": "^5.4.4",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "docusaurus": "^1.14.7",
     "docusaurus-lunr-search": "^3.3.0",
     "docusaurus-plugin-sass": "^0.2.5",
+    "docusaurus-pushfeedback": "^0.1.7",
     "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
     "polipop": "^1.0.0",
     "prism-react-renderer": "^2.2.0",
