--- a/package.json
+++ b/package.json
@@ -17,27 +17,24 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/plugin-content-docs": "^3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@wojtekmaj/react-daterange-picker": "^5.4.4",
-    "clsx": "^2.0.0",
-    "dayjs": "^1.11.10",
-    "docusaurus": "^1.14.7",
-    "docusaurus-lunr-search": "^3.3.0",
-    "docusaurus-plugin-sass": "^0.2.5",
-    "docusaurus-pushfeedback": "^0.1.7",
+    "@docusaurus/core": "2.0.0-beta.18",
+    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@mdx-js/react": "^1.6.22",
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
+    "clsx": "^1.1.1",
+    "dayjs": "^1.11.2",
+    "docusaurus-lunr-search": "^2.3.2",
+    "docusaurus-plugin-sass": "^0.2.2",
     "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
     "polipop": "^1.0.0",
-    "prism-react-renderer": "^2.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "sass": "^1.69.5",
-    "styled-components": "^6.1.1",
+    "prism-react-renderer": "^1.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.11.0",
+    "sass": "^1.50.1",
+    "styled-components": "^5.3.6",
     "swizzle": "^1.1.0",
-    "unix-timestamp": "^1.0.3"
+    "unix-timestamp": "^1.0.2"
   },
   "browserslist": {
     "production": [
