--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "docusaurus-lunr-search": "^3.3.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
+     "dotenv": "^16.3.2",
     "polipop": "^1.0.0",
     "prism-react-renderer": "^2.2.0",
     "react": "^18.2.0",
